# CodingManagerMCP

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/: sample_project_context.json
docs/: blueprints.md  coding_plan.md
src/manager_agent/: context_manager.py  enums.py  llm_interface.py  models.py
